plugins {
	id 'fabric-loom' version '1.8.13'
	id 'maven-publish'
}

version = project.mod_version
group   = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	maven { url = "https://maven.shedaniel.me/" }
	mavenCentral()
	maven { url = "https://maven.terraformersmc.com/" }
	maven {
		name = "Ladysnake Mods"
		url  = 'https://maven.ladysnake.org/releases'
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"loracore" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}


dependencies {
	// To change the versions see the gradle.properties file
	minecraft       "com.mojang:minecraft:${project.minecraft_version}"
	mappings        "net.fabricmc:yarn:${project.yarn_mappings}:v2"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// OkHttp (для HTTP‑запросов к API)
	modImplementation "com.squareup.okhttp3:okhttp:4.12.0"
	include "com.squareup.okhttp3:okhttp:4.12.0"

	// Gson (для парсинга JSON‑ответов API)
	modImplementation "com.google.code.gson:gson:2.10.1"
	include "com.google.code.gson:gson:2.10.1"

	modImplementation "com.squareup.okio:okio:3.6.0"
	include          "com.squareup.okio:okio:3.6.0"

	// ModMenu (для экрана настроек мода, опциональная зависимость)
	modImplementation "com.terraformersmc:modmenu:10.0.0"

	// Cloth Config (для построения экрана настроек, используется ModMenu)
	modImplementation   "me.shedaniel.cloth:cloth-config-fabric:14.0.139"
	modLocalRuntime     "me.shedaniel.cloth:cloth-config-fabric:14.0.139"
	// Kotlin Standard Library (нужна для ClothConfig)
	modImplementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.22"
	include          "org.jetbrains.kotlin:kotlin-stdlib:1.9.22"

	modImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22"
	include          "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.22"


	implementation "org.apache.commons:commons-compress:1.26.2"
	include "org.apache.commons:commons-compress:1.26.2"

	// Cardinal Components API (для системы компонентов мода)
	modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"



	include           "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
	include           "org.ladysnake.cardinal-components-api:cardinal-components-entity:${project.cca_version}"


	implementation "org.lwjgl:lwjgl-stb:${project.lwjgl_version}"
	implementation "org.lwjgl:lwjgl-stb:${project.lwjgl_version}:${project.lwjgl_natives}"

	testImplementation 'junit:junit:4.13.2'
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archives_base_name}" }
	}
}
tasks.register('copyMods', Copy) {
	from configurations.modImplementation
	into "$buildDir/libs/mods"
}

runClient {
	dependsOn 'copyMods'
	doFirst {
		// при необходимости, настройте jvmArgs, classpath
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
